# sitebot

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  SETUP.md  requirements.txt
docker/: Dockerfile.ros2  docker-compose.yml
gazebo/models/sitebot/: model.config  model.sdf
gazebo/worlds/: construction_site.sdf
mcp_server/: mujoco_viewer_server.py  pyproject.toml
mcp_server/src/mujoco_mcp/: mcp_server.py  rosbridge_client.py
models/: sitebot.xml
ros2_ws/src/sitebot_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/sitebot_ros/config/: gz_bridge.yaml  nav2_params.yaml  sitebot.rviz  sitebot_controllers.yaml  slam_params.yaml
ros2_ws/src/sitebot_ros/launch/: gazebo.launch.py  sitebot.launch.py
ros2_ws/src/sitebot_ros/sitebot_ros/: __init__.py  lidar_publisher.py  mujoco_bridge.py
ros2_ws/src/sitebot_ros/urdf/: sitebot.urdf.xacro
scripts/: run_mission.py  test_robot.py
src/: __init__.py
src/control/: __init__.py  diff_drive.py
src/navigation/: __init__.py  waypoint_nav.py
src/planning/: __init__.py  coverage.py
src/utils/: __init__.py
worlds/: construction_site.xml
